--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,9 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Hello, I'm a 20 year old aspiring software engineer. I'm currently 
+        pursuing a bachelors degree in computer science. In my free time, I
+        like to learn new stuff and watch movies and tv shows. 
       </p>
       <p>
         Read the blog posts or check
